--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.9.0",
+    "express": "^4.18.2",
     "graphql-request": "^6.1.0",
     "dotenv": "^16.4.1",
     "zod": "^3.22.4"
